@@ -1,5 +1,5 @@
 /*
-  $NiH: zip_name_locate.c,v 1.14 2004/11/17 21:55:12 wiz Exp $
+  $NiH: zip_name_locate.c,v 1.15 2004/11/18 15:04:05 wiz Exp $
 
   zip_name_locate.c -- get index by name
   Copyright (C) 1999, 2003, 2004 Dieter Baron and Thomas Klausner
@@ -45,15 +45,30 @@
 int
 zip_name_locate(struct zip *za, const char *fname, int flags)
 {
-    int (*cmp)(const char *, const char *);
-    const char *fn, *p, *q;
-    int i, n;
-
+    int i;
+    
     if (fname == NULL) {
 	_zip_error_set(&za->error, ZIP_ER_INVAL, 0);
 	return -1;
     }
     
+    i = _zip_name_locate(za, fname, flags);
+
+    if (i == -1)
+	_zip_error_set(&za->error, ZIP_ER_NOENT, 0);
+
+    return i;
+}
+
+
+
+int
+_zip_name_locate(struct zip *za, const char *fname, int flags)
+{
+    int (*cmp)(const char *, const char *);
+    const char *fn, *p, *q;
+    int i, n;
+
     cmp = (flags & ZIP_FL_NOCASE) ? strcasecmp : strcmp;
 
     n = (flags & ZIP_FL_UNCHANGED) ? za->cdir->nentry : za->nentry;
@@ -62,6 +77,10 @@ zip_name_locate(struct zip *za, const char *fname, int flags)
 	    fn = za->cdir->entry[i].filename;
 	else
 	    fn = zip_get_name(za, i);
+
+	/* newly added (partially filled) entry */
+	if (fn == NULL)
+	    continue;
 	
 	if (flags & ZIP_FL_NODIR) {
 	    /* XXX: is this correct? */
@@ -79,6 +98,5 @@ zip_name_locate(struct zip *za, const char *fname, int flags)
 	    return i;
     }
 
-    _zip_error_set(&za->error, ZIP_ER_NOENT, 0);
     return -1;
 }
